# casko-bot-rs

./: .gitignore  Cargo.toml  README.md
src/: errors.rs  handler.rs  main.rs  meltomos.rs  utils.rs  watchees.rs
src/handler/: art.rs  combat.rs  freetalk.rs  mod.rs  player_stat.rs  talk.rs  util.rs  vote.rs  watch.rs
src/meltomos/: meltomo.rs  mod.rs  stat.rs
src/watchees/: stat.rs  watchee.rs
