[package]
edition = '2018'
name = "casko-bot-rs"
version = "0.0.1"
authors = [ "misonomi <misonomi0612@gmail.com>" ]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
]
version = "0.8"

[dependencies]
lazy_static = "1.4.0"
regex = "*"
rand = "*"
